--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.19"
+  },
+  "dependencies": {
+    "shortid": "^2.2.16"
   }
 }
