--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "yargs": "^17.5.1"
   }
 }
